--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
 
     <div class="Content">
-    <a class="Link" href="https://ferrofy.github.io/Public_Data/PY/Total_Investments.py">Click Here To Download Python File About Investments</a>
+    <a class="Link_Download" href="https://ferrofy.github.io/Public_Data/PY/Total_Investments.py">Click Here To Download Python File About Investments</a>
     </div>
 
     <div class="Footer">
