--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
 
     <div class="Content">
-    <a href="">Under Development</a>
+    <a href="https://ferrofy.github.io/Data/PY/Investments.py">Click Here To See Investments :)</a>
     </div>
 
     <div class="Footer">
