--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="Header">
-        <h1 id="H1_Header">FerroFy</h1>
+        <h1 id="H1_Header">Data</h1>
     </div>
 
     <div class="Content">
