--- a/Live_Investments.html
+++ b/Live_Investments.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="Header">
-        <h1 id="H1_Header">FerroFy</h1>
+        <h1 id="H1_Header">Live Investments</h1>
     </div>
 
     <div class="Content">
