--- a/Live_Investments.html
+++ b/Live_Investments.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Live Investments</title>
     <link rel="icon" href="IMG/Favicon.png" type="image/png">
-    <link rel="stylesheet" href="CSS/Live_Investments.css">
+    <link rel="stylesheet" href="CSS/Live_Investments_Btn.css">
+    <link rel="stylesheet" href="CSS/Structure.css">
 </head>
 
 <body>
@@ -50,7 +51,7 @@
     <div class="Footer">
         <h1>Thank You User</h1>
     </div>
-    <script src="JS/Live_Investments.js"></script>
+    <script src="JS/Live_Investments_Btn.js"></script>
 </body>
 
 </html>
