--- a/Live_Investments.html
+++ b/Live_Investments.html
@@ -17,33 +17,39 @@
 
     <div class="Content">
         <div class="All_Companys">
-            <button class="Company_Box" data-popup="Pool">Pool
-                <div class="Loading_Bar_Btn" id="Loading_Bar_Pool_Btn"></div>
-            </button>
-
-            <button class="Company_Box" data-popup="Farm">Farm
-                <div class="Loading_Bar_Btn" id="Loading_Bar_Farm_Btn"></div>
-            </button>
-
-            <div class="Open_Box" id="Pool">
-                <div class="Open_Box_Content">
-                    <span class="Close_Btn">&times;</span>
-                    <h2>Pool</h2>
-                    <div class="Loading_Bar" id="Loading_Bar_Pool"></div>
-                    <p class="Investments_Details"></p>
-                    <p class="Shares_Details"></p>
-                    <p class="Share_Rates"></p>
-                </div>
+            <div class="Plan">
+                <h1>Live Plan</h1><br>
+                <button class="Company_Box" data-popup="Farm">Farm
+                    <div class="Loading_Bar_Btn" id="Loading_Bar_Farm_Btn"></div>
+                </button>
             </div>
-            <div class="Open_Box" id="Farm">
-                <div class="Open_Box_Content">
-                    <span class="Close_Btn">&times;</span>
-                    <h2>Farm</h2>
-                    <div class="Loading_Bar" id="Loading_Bar_Farm"></div>
-                    <p class="Investments_Details"></p>
-                    <p class="Shares_Details"></p>
-                    <p class="Share_Rates"></p>
-                </div>
+            <div class="Plan">
+                <h1>Upcoming Plan</h1><br>
+                <button class="Company_Box" data-popup="Pool">Pool
+                    <div class="Loading_Bar_Btn" id="Loading_Bar_Pool_Btn"></div>
+                </button>
+            </div>
+        </div>
+        <h3 id="Small_Text">Small Text Here</h3><br>
+
+        <div class="Open_Box" id="Pool">
+            <div class="Open_Box_Content">
+                <span class="Close_Btn">&times;</span>
+                <h2>Pool</h2>
+                <div class="Loading_Bar" id="Loading_Bar_Pool"></div>
+                <p class="Investments_Details"></p>
+                <p class="Shares_Details"></p>
+                <p class="Share_Rates"></p>
+            </div>
+        </div>
+        <div class="Open_Box" id="Farm">
+            <div class="Open_Box_Content">
+                <span class="Close_Btn">&times;</span>
+                <h2>Farm</h2>
+                <div class="Loading_Bar" id="Loading_Bar_Farm"></div>
+                <p class="Investments_Details"></p>
+                <p class="Shares_Details"></p>
+                <p class="Share_Rates"></p>
             </div>
         </div>
     </div>
