--- a/Live_Investments.html
+++ b/Live_Investments.html
@@ -30,7 +30,9 @@
                 </button>
             </div>
         </div>
-        <h3 id="Small_Text">Small Text Here</h3><br>
+
+        <h2>🌟 Exciting News! 🌟</h2>
+        <p>We're investing in new ventures and are thrilled to offer you exclusive shares as a token of our gratitude. Your support means the world to us! 🚀📈</p>
 
         <div class="Open_Box" id="Pool">
             <div class="Open_Box_Content">
