--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>FerroFy</title>
     <link rel="icon" href="IMG/Favicon.png" type="image/png">
     <link rel="stylesheet" href="CSS/Structure.css">
+    <link rel="stylesheet" href="CSS/Btn.css">
 </head>
 
 <body>
@@ -15,9 +16,12 @@
     </div>
 
     <div class="Content">
-    <a href="https://ferrofy.github.io/Data/Live_Investments">Click Here To See Live Investments</a>
-    </div>
 
+  <button id="Go_To_Live_Investments" class="button">Live Investments</button>
+
+
+    </div>
+<script src="JS/Btn.js"></script>
     <div class="Footer">
         <h1>Thank You User</h1>
     </div>
