--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="Content">
 
-  <button id="Go_To_Live_Investments" class="button">Live Investments</button>
+  <button id="Go_To_Live_Investments" class="Btn">Live Investments</button>
 
 
     </div>
