--- a/Past_Investments.html
+++ b/Past_Investments.html
@@ -56,7 +56,7 @@
     <div class="Footer">
         <h1>Thank You User</h1>
     </div>
-    <script src="Past_Investments.js"></script>
+    <script src="JS/Past_Investments.js"></script>
 </body>
 
 </html>
