--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="Content">
 
   <button id="Go_To_Live_Investments" class="Btn">Live Investments</button>
-
+  <button id="Go_To_Past_Investments" class="Btn">Past Investments</button>
 
     </div>
 <script src="JS/Btn.js"></script>
