--- a/Shares.html
+++ b/Shares.html
@@ -16,8 +16,10 @@
     </div>
 
     <div class="Content">
-        <h1>Parent Company: FerroFy</h1><br>
-        <button class="Company_Box" data-popup="FerroFy">FerroFy</button>
+        <div class="Parent_Company">
+            <h1>Parent Company: FerroFy</h1><br>
+            <button class="Company_Box" data-popup="FerroFy">FerroFy</button>
+        </div>
         <div class="All_Companies">
             <div class="Plan">
                 <h2>Sub Companies</h2><br>
@@ -25,7 +27,6 @@
                 <button class="Company_Box" data-popup="Pool">Pool</button>
             </div>
         </div>
-
         <div class="Open_Box" id="FerroFy">
             <div class="Open_Box_Content">
                 <span class="Close_Btn">&times;</span>
