--- a/Shares.html
+++ b/Shares.html
@@ -17,7 +17,7 @@
 
     <div class="Content">
         <div class="Parent_Company">
-            <h1>Parent Company: FerroFy</h1><br>
+            <h1>FerroFy</h1><br>
             <button class="Company_Box" data-popup="FerroFy">FerroFy</button>
         </div>
         <div class="All_Companies">
