--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>FerroFy</title>
     <link rel="icon" href="IMG/Favicon.png" type="image/png">
     <link rel="stylesheet" href="CSS/Structure.css">
-    <link rel="stylesheet" href="CSS/Btn.css">
+    <link rel="stylesheet" href="CSS/index.css">
 </head>
 
 <body>
