--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
     <div class="Content">
 
   <button id="Go_To_Live_Investments" class="Btn">Live Investments</button>
+  <button id="Go_To_Shares" class="Btn">Shares</button>
   <button id="Go_To_Past_Investments" class="Btn">Past Investments</button>
 
     </div>
-<script src="JS/Btn.js"></script>
+<script src="JS/index.js"></script>
     <div class="Footer">
         <h1>Thank You User</h1>
     </div>
