--- a/Shares.html
+++ b/Shares.html
@@ -1,60 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shares</title>
-    <link rel="icon" href="IMG/Favicon.png" type="image/png">
-    <link rel="stylesheet" href="CSS/Shares.css">
-    <link rel="stylesheet" href="CSS/Structure.css">
+    <title>Shares Distribution</title>
+    <link rel="stylesheet" href="Structure.css">
 </head>
-
 <body>
     <div class="Header">
         <h1 id="H1_Header">Shares</h1>
     </div>
 
-    <div class="Content">
-        <div class="Parent_Company">
-            <h1>FerroFy</h1><br>
-            <button class="Company_Box" data-popup="FerroFy">FerroFy</button>
-        </div>
-        <div class="All_Companies">
-            <div class="Plan">
-                <h2>Sub Companies</h2><br>
-                <button class="Company_Box" data-popup="Farm">Farm</button>
-                <button class="Company_Box" data-popup="Pool">Pool</button>
-            </div>
-        </div>
-        <div class="Open_Box" id="FerroFy">
-            <div class="Open_Box_Content">
-                <span class="Close_Btn">&times;</span>
-                <h2>FerroFy</h2>
-                <p class="Shares_Details"></p>
-            </div>
-        </div>
-        <div class="Open_Box" id="Farm">
-            <div class="Open_Box_Content">
-                <span class="Close_Btn">&times;</span>
-                <h2>Farm</h2>
-                <p class="Shares_Details"></p>
-            </div>
-        </div>
-        <div class="Open_Box" id="Pool">
-            <div class="Open_Box_Content">
-                <span class="Close_Btn">&times;</span>
-                <h2>Pool</h2>
-                <p class="Shares_Details"></p>
-            </div>
-        </div>
+    <div class="content">
+        <h1>Investments</h1>
+        <div id="investmentsContent"></div>
     </div>
-    <strong>Note - Final Shares Will be Distributed On 7 Dec 2025</strong>
+
+    <strong style="color: #39ff14;">Note - Final Shares Will be Distributed On 7 Dec 2025 📅✨</strong>
+    <strong style="color: #39ff14;">Note - 25% Shares for Public Listing on 7 Dec 2026 📅✨</strong>
+
     <div class="Footer">
-        <h1>Thank You User</h1>
+        <h1>Thank You, User</h1>
     </div>
 
     <script src="JS/Shares.js"></script>
 </body>
-
 </html>
