--- a/Shares.html
+++ b/Shares.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shares Distribution</title>
-    <link rel="stylesheet" href="Structure.css">
+    <link rel="stylesheet" href="CSS/Structure.css">
 </head>
 <body>
     <div class="Header">
