--- a/Shares.html
+++ b/Shares.html
@@ -14,7 +14,7 @@
     <div class="content">
         <div id="investmentsContent"></div>
     </div>
-
+<hr color="orange">
     <strong style="color: #39ff14;">Note - Final Shares Will be Distributed On 7 Dec 2025 📅✨</strong>
     <strong style="color: #39ff14;">Note - 25% Shares for Public Listing on 7 Dec 2026 📅✨</strong>
 
