--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
     <div class="Content">
 
-  <button id="Go_To_Live_Investments" class="Btn">Live Investments</button>
-  <button id="Go_To_Shares" class="Btn">Shares</button>
-  <button id="Go_To_Past_Investments" class="Btn">Past Investments</button>
+  <button id="Go_To_Live_Investments" class="Btn">Live Investments</button><br><br>
+  <button id="Go_To_Shares" class="Btn">Shares</button><br><br>
+  <button id="Go_To_Past_Investments" class="Btn">Past Investments</button><br>
 
     </div>
 <script src="JS/index.js"></script>
