--- a/Shares.html
+++ b/Shares.html
@@ -1,22 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shares Distribution</title>
     <link rel="stylesheet" href="CSS/Structure.css">
+    <link rel="stylesheet" href="CSS/Shares.css">
 </head>
+
 <body>
     <div class="Header">
         <h1 id="H1_Header">Shares</h1>
     </div>
 
     <div class="content">
-        <div id="investmentsContent"></div>
+        <table id="sharesTable">
+            <caption style="color: #39ff14;">FFX Per User</caption>
+            <thead>
+                <tr>
+                    <th style="color: cyan;">User</th>
+                    <th style="color: cyan;">Shares</th>
+                    <th style="color: cyan;">Multiplier</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Rows will be populated by JavaScript -->
+            </tbody>
+        </table>
     </div>
-<hr>
+
+    <div class="content">
+        <table id="combinedTable">
+            <caption style="color: #39ff14;">Shares Distribution</caption>
+            <thead>
+                <tr>
+                    <th style="color: cyan;">Type</th>
+                    <th style="color: cyan;">Amount</th>
+                    <th style="color: cyan;">Multiplier</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Rows will be populated by JavaScript -->
+            </tbody>
+        </table>
+    </div>
+
+    <div class="content">
+        <table id="ffxPercentageTable">
+            <caption style="color: #39ff14;">% Per FFX</caption>
+            <thead>
+                <tr>
+                    <th style="color: cyan;">Amount</th>
+                    <th style="color: cyan;">%</< /th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td style="color: #ffff00;">1 FFX</td>
+                    <td style="color: white;">0.001%</td>
+                </tr>
+                <tr>
+                    <td style="color: #ffff00;">10 FFX</td>
+                    <td style="color: white;">0.01%</td>
+                </tr>
+                <tr>
+                    <td style="color: #ffff00;">100 FFX</td>
+                    <td style="color: white;">0.1%</td>
+                </tr>
+                <tr>
+                    <td style="color: #ffff00;">1 Th FFX</td>
+                    <td style="color: white;">0.1%</td>
+                </tr>
+                <tr>
+                    <td style="color: #ffff00;">10 Th FFX</td>
+                    <td style="color: white;">10%</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <hr>
     <strong style="color: white;">Note - Final Shares Will be Distributed On 7 Dec 2026 📅✨</strong>
-<hr>
+    <hr>
     <strong style="color: white;">Note - 25% Shares for Public Listing on 7 Dec 2026 📅✨</strong>
 
     <div class="Footer">
@@ -25,4 +91,5 @@
 
     <script src="JS/Shares.js"></script>
 </body>
+
 </html>
