--- a/Shares.html
+++ b/Shares.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shares Distribution</title>
     <link rel="stylesheet" href="CSS/Structure.css">
-    <link rel="stylesheet" href="CSS/Shares.css">
 </head>
 
 <body>
@@ -52,7 +51,7 @@
             <thead>
                 <tr>
                     <th style="color: cyan;">Amount</th>
-                    <th style="color: cyan;">%</< /th>
+                    <th style="color: cyan;">%</th>
                 </tr>
             </thead>
             <tbody>
@@ -70,7 +69,7 @@
                 </tr>
                 <tr>
                     <td style="color: #ffff00;">1 Th FFX</td>
-                    <td style="color: white;">0.1%</td>
+                    <td style="color: white;">1%</td>
                 </tr>
                 <tr>
                     <td style="color: #ffff00;">10 Th FFX</td>
