--- a/Live_Investments.html
+++ b/Live_Investments.html
@@ -56,7 +56,8 @@
     <div class="Footer">
         <h1>Thank You User</h1>
     </div>
-    <script src="JS/Live_Investments_Btn.js"></script>
+    <script src="JS/Live_Investments.js"></script>
+    <script src="JS/Investments_Data.js"></script>
 </body>
 
 </html>
