--- a/Live_Investments.html
+++ b/Live_Investments.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Live Investments</title>
     <link rel="icon" href="IMG/Favicon.png" type="image/png">
-    <link rel="stylesheet" href="CSS/Live_Investments_Btn.css">
+    <link rel="stylesheet" href="CSS/Live_Investments.css">
     <link rel="stylesheet" href="CSS/Structure.css">
 </head>
 
