--- a/Live_Investments.html
+++ b/Live_Investments.html
@@ -7,7 +7,7 @@
     <title>Live Investments</title>
     <link rel="icon" href="IMG/Favicon.png" type="image/png">
     <link rel="stylesheet" href="CSS/Live_Investments.css">
-    <link rel="stylesheet" href="CSS/Structure.css">
+    <link rel="stylesheet" href="CSS/Multi_Pages/Structure.css">
 </head>
 
 <body>
