--- a/Shares.html
+++ b/Shares.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shares Distribution</title>
-    <link rel="stylesheet" href="CSS/Structure.css">
+    <link rel="stylesheet" href="CSS/Multi_Pages/Structure.css">
     <link rel="stylesheet" href="CSS/Shares.css">
 </head>
 
