--- a/Private/trx.html
+++ b/Private/trx.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trx</title>
     <link rel="icon" href="IMG/Favicon.png" type="image/png">
-    <link rel="stylesheet" href="./CSS/Multi_Pages/Structure.css">
+    <link rel="stylesheet" href="../CSS/Multi_Pages/Structure.css">
     <link rel="stylesheet" href="CSS/Private.css">
 </head>
 
