--- a/Private.html
+++ b/Private.html
@@ -26,7 +26,7 @@
         </div>
     </div>
 
-    <script src="Private/JS/Passwords.js"></script>
+    <script src="Private/JS/Password.js"></script>
 
     <div class="Footer">
         <h1>Thank You User</h1>
