--- a/Private.html
+++ b/Private.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FerroFy</title>
     <link rel="icon" href="IMG/Favicon.png" type="image/png">
-    <link rel="stylesheet" href="Private/CSS/Multi_Files/Private_Structure.css">
+    <link rel="stylesheet" href="Private_Data/CSS/Multi_Files/Private_Structure.css">
 </head>
 
 <body>
@@ -26,7 +26,7 @@
         </div>
     </div>
 
-    <script src="Private/JS/Password.js"></script>
+    <script src="Private_Data/JS/Password.js"></script>
 
     <div class="Footer">
         <h1>Thank You User</h1>
